<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        tools:context=".view.addemployee.AddEmployeeActivity">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/back"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhapten"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:text="@={model.name}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_salary"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/edt_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhapluong"
            android:inputType="number"
            android:nextFocusDown="@id/edt_age"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:text="@={model.salary}"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/edt_salary"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhaptuoi"
            android:inputType="number"
            android:nextFocusDown="@id/btn_save"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:text="@={model.age}"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_age"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/custom_button"
                android:inputType="textCapWords"
                android:onClick="@{(v) -> model.onClick(v)}"
                android:text="@string/luu"
                android:textColor="#ffffff"
                android:textSize="18sp"

                tools:ignore="ButtonStyle,TextViewEdits" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/custom_button"
                android:inputType="textCapWords"
                android:text="@string/huy"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#344955"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/themnhanvien"
                android:textColor="#FFFFFF"
                android:textSize="18sp"

                />
        </RelativeLayout>
    </RelativeLayout>

    <data>

        <variable
            name="model"
            type="com.example.manageremployee_mvvm.view.addemployee.AddEmployeeViewModel" />
    </data>


</layout>