<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
          <variable
              name="viewModel"
              type="com.example.manageremployee_mvvm.view.updateemployee.UpdateEmployViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        tools:context=".view.updateemployee.UpdateEmployeeActivity">
        <RelativeLayout
            android:id="@+id/content_relaytivelayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#344955"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Employee"
                android:textColor="#FFFFFF"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="18sp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:id="@+id/content_layout"
            app:layout_constraintTop_toBottomOf="@+id/content_relaytivelayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/tennhanvien"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"

                />

            <EditText
                android:id="@+id/edt_update_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.updateName}"
                android:layout_marginTop="3dp"
                android:layout_marginRight="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/luongnhanvien"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"

                />

            <EditText
                android:id="@+id/edt_update_salary"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.updateSalary}"
                android:layout_marginTop="3dp"
                android:inputType="number"
                android:layout_marginRight="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/tuoinhanvien"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"

                />

            <EditText
                android:id="@+id/edt_age_update"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.updateAge}"
                android:layout_marginTop="3dp"
                android:inputType="number"
                android:layout_marginRight="12dp" />
        </LinearLayout>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/content_layout"
            android:background="@drawable/custom_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:id="@+id/btn_save_update"
            android:text="Save"
            android:textColor="#FFFFFF"
            android:inputType="textCapCharacters"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>