<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.DetailEmployeeActivity">


        <LinearLayout
            android:id="@+id/content_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luongnhanvien"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_detail_saraly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.salary}"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_salary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuoinhanvien"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_detail_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.age}"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_img_delete">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tennhanvien"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@{viewModel.fullname}"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_img_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_user_detail">

            <ImageButton
                android:id="@+id/imb_delete"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/backbround_shape"
                android:scaleType="center"
                android:src="@drawable/ic_delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="ContentDescription" />
<!--                android:onClick="@{()-> viewModel.onClickDelete()}"-->


            <ImageButton
                android:id="@+id/imb_edit"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/backbround_shape"
                android:scaleType="center"
                android:src="@drawable/ic_edit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#344955"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile Employee"
                android:textColor="#FFFFFF"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="18sp"

                />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="#757575"
            app:layout_constraintTop_toBottomOf="@+id/content_age" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user_detail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="128dp"
            android:src="@drawable/chipu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.example.manageremployee_mvvm.view.detail.DetailViewModel" />
    </data>


</layout>
